--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <footer class="footer">
     <div class="container">
         <button class="button button-3d button-action button-circle " id="support"><i class="fa fa-thumbs-up"></i></button>
-        <button class="button button-3d button-action button-circle button-caution" id="unsupport"><i class="fa fa-thumbs-down"></i></button>
+        <button class="button button-3d button-action button-circle button-highlight" id="unsupport"><i class="fa fa-thumbs-down"></i></button>
         
     </div>
 
