--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
 <div class="push"></div>
   <footer class="footer">
     <div class="container">
+
+        <div><p>Do you like our APP?</p></div>
         <button class="button button-3d button-action button-circle " id="support"><i class="fa fa-thumbs-up"></i></button>
         <button class="button button-3d button-action button-circle button-highlight" id="unsupport"><i class="fa fa-thumbs-down"></i></button>
         
     </div>
-
+    
     <div id="supportNum"></div>
     </footer>
 </div>
